src/test/deca/context/invalid/created/SansObjet/BoolExprWithIntegers.deca
// Description:
//  Test d'expressions booleennes avec des entiers
// Resultats:
//    BoolExprWithIntegers.deca:7:16: Error: Illegal RValue type, got null, expected boolean

{
    boolean x = null;
    boolean y = true;
    boolean result = x || y;
    if(result){
        println("ok");
    } else {
        println("ERRONE");
    }
}